# flash-attention-annotated

standalone/: API_V2_REFERENCE.md  BUILD_INSTRUCTIONS.md  CHECK_DATA_CONSISTENCY.md  CMakeLists.txt  CMakeLists_fully_separated.txt  CMakeLists_use_hopper.txt  CMakeLists_v2.txt  COMPILATION_FIXES.md  COMPILATION_STRATEGY.md  DEBUG_GUIDE.md  HOW_TO_DEBUG_KERNEL.md  README.md  README_V2_TESTCASE.md  SUMMARY_V2.md  build.sh  build_and_test_v2.sh  build_fully_separated.sh  build_test_single.sh  build_use_hopper.sh  compile_like_setup.sh  diagnose_build.sh  generate_kernels.py  setup_no_pytorch.py  use_fully_separated.sh
standalone/include/: debug_input_data.h  debug_kernel_info.h  flash_api.h  flash_api_v2.h
standalone/kernels/: kernel_bf16_hdim128.cu  kernel_bf16_hdim256.cu  kernel_fp16_hdim128.cu  kernel_fp16_hdim256.cu  kernel_fp8_e4m3_hdim128.cu
standalone/scripts/: add_debug_print.patch  check_input_data.cu  check_kernel_name.sh  compare_actual_kernels.sh  compare_kernel_params.sh  compare_kernels.py
standalone/src/: debug_print_params.cu  flash_api.cu  flash_api_v2.cu  main.cpp  main_v2.cpp  test_fp16_causal_gqa.cpp  test_fp16_decode_gqa.cpp  test_fp8_varlen.cpp  test_fp8_varlen_1680.cpp  test_fp8_varlen_64.cpp
