cmake_minimum_required(VERSION 3.18)
project(flash_attention_standalone LANGUAGES CUDA CXX)

# Set C++ and CUDA standards
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CUDA_STANDARD 17)
set(CMAKE_CUDA_STANDARD_REQUIRED ON)

# Find CUDA
find_package(CUDAToolkit REQUIRED)

# Check CUDA version for Hopper support
if(CUDAToolkit_VERSION VERSION_LESS "11.8")
    message(FATAL_ERROR "CUDA 11.8+ is required for Hopper (SM90) support")
endif()

# Include directories
include_directories(
    ${CMAKE_CURRENT_SOURCE_DIR}/include
    ${CMAKE_CURRENT_SOURCE_DIR}/../
    ${CMAKE_CURRENT_SOURCE_DIR}/../csrc/flash_attn/src
    ${CMAKE_CURRENT_SOURCE_DIR}/../csrc/cutlass/include
    ${CMAKE_CURRENT_SOURCE_DIR}/../hopper
    ${CUDAToolkit_INCLUDE_DIRS}
)

# Define preprocessor macros
add_compile_definitions(
    FLASHATTENTION_STANDALONE
    FLASHATTENTION_DISABLE_BACKWARD  # Only forward pass for now
    FLASH_NAMESPACE=flash
)

# CUDA compilation flags (from setup.py analysis)
set(CUDA_FLAGS
    -O3
    -std=c++17
    -gencode arch=compute_90a,code=sm_90a  # Use sm_90a not sm_90
    -U__CUDA_NO_HALF_OPERATORS__
    -U__CUDA_NO_HALF_CONVERSIONS__
    -U__CUDA_NO_HALF2_OPERATORS__
    -U__CUDA_NO_BFLOAT16_CONVERSIONS__
    --expt-relaxed-constexpr
    --expt-extended-lambda
    --use_fast_math
    -DCUTE_SM90_EXTENDED_MMA_SHAPES_ENABLED
    -DCUTLASS_ENABLE_GDC_FOR_SM90
    -DNDEBUG
    -Xcompiler=-fPIC
    -Xcompiler=-Wall
)

# C++ compilation flags
set(CXX_FLAGS
    -O3
    -Wall
    -fPIC
)

# ============================================================================
# IMPORTANT: Each kernel configuration is compiled as a separate object library
# This prevents register limit conflicts and allows setmaxnreg to work properly
# ============================================================================

# List of kernel configurations (generated by generate_kernels.py)
# Only FP16 and FP8, no BF16
set(KERNEL_SOURCES
    ${CMAKE_CURRENT_SOURCE_DIR}/kernels/kernel_fp16_hdim128.cu
    ${CMAKE_CURRENT_SOURCE_DIR}/kernels/kernel_fp16_hdim256.cu
    ${CMAKE_CURRENT_SOURCE_DIR}/kernels/kernel_fp8_e4m3_hdim128.cu
)

# Create a separate object library for each kernel
set(KERNEL_OBJECTS)
foreach(kernel_source ${KERNEL_SOURCES})
    # Extract kernel name from path
    get_filename_component(kernel_name ${kernel_source} NAME_WE)

    # Create object library for this kernel
    add_library(${kernel_name} OBJECT ${kernel_source})

    # Set compilation flags
    target_compile_options(${kernel_name} PRIVATE
        $<$<COMPILE_LANGUAGE:CUDA>:${CUDA_FLAGS}>
    )

    # Enable separable compilation
    set_target_properties(${kernel_name} PROPERTIES
        CUDA_SEPARABLE_COMPILATION ON
        POSITION_INDEPENDENT_CODE ON
    )

    # Add to list of objects
    list(APPEND KERNEL_OBJECTS $<TARGET_OBJECTS:${kernel_name}>)

    message(STATUS "Added kernel: ${kernel_name}")
endforeach()

# ============================================================================
# API wrapper (compiled separately, no kernel instantiation)
# ============================================================================

add_library(flash_api OBJECT
    ${CMAKE_CURRENT_SOURCE_DIR}/src/flash_api.cu
)

target_compile_options(flash_api PRIVATE
    $<$<COMPILE_LANGUAGE:CUDA>:${CUDA_FLAGS}>
)

set_target_properties(flash_api PROPERTIES
    CUDA_SEPARABLE_COMPILATION ON
    POSITION_INDEPENDENT_CODE ON
)

# Scheduler for variable-length sequences
add_library(flash_scheduler OBJECT
    ${CMAKE_CURRENT_SOURCE_DIR}/../hopper/flash_prepare_scheduler.cu
)

target_compile_options(flash_scheduler PRIVATE
    $<$<COMPILE_LANGUAGE:CUDA>:${CUDA_FLAGS}>
)

set_target_properties(flash_scheduler PROPERTIES
    CUDA_SEPARABLE_COMPILATION ON
    POSITION_INDEPENDENT_CODE ON
)

# ============================================================================
# Main executable
# ============================================================================

add_executable(flash_attention_exec
    ${CMAKE_CURRENT_SOURCE_DIR}/src/main.cpp
    $<TARGET_OBJECTS:flash_api>
    $<TARGET_OBJECTS:flash_scheduler>
    ${KERNEL_OBJECTS}
)

# Link libraries
target_link_libraries(flash_attention_exec PRIVATE
    CUDA::cudart
    CUDA::cuda_driver
)

target_compile_options(flash_attention_exec PRIVATE
    $<$<COMPILE_LANGUAGE:CXX>:${CXX_FLAGS}>
)

# Set executable properties
set_target_properties(flash_attention_exec PROPERTIES
    CUDA_SEPARABLE_COMPILATION ON
    CUDA_RESOLVE_DEVICE_SYMBOLS ON
    RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}
)

# ============================================================================
# Optional: Build static library for integration
# ============================================================================

option(BUILD_STATIC_LIB "Build static library" OFF)

if(BUILD_STATIC_LIB)
    add_library(flash_attention_static STATIC
        $<TARGET_OBJECTS:flash_api>
        ${KERNEL_OBJECTS}
    )

    target_link_libraries(flash_attention_static PUBLIC
        CUDA::cudart
    )

    set_target_properties(flash_attention_static PROPERTIES
        CUDA_SEPARABLE_COMPILATION ON
        CUDA_RESOLVE_DEVICE_SYMBOLS ON
        POSITION_INDEPENDENT_CODE ON
    )
endif()

# ============================================================================
# Print configuration summary
# ============================================================================

message(STATUS "")
message(STATUS "Flash Attention Standalone Configuration:")
message(STATUS "  CUDA Version: ${CUDAToolkit_VERSION}")
message(STATUS "  CUDA Architecture: SM90a (Hopper)")
message(STATUS "  Number of kernels: ${CMAKE_CURRENT_SOURCE_DIR}")
message(STATUS "  Build type: ${CMAKE_BUILD_TYPE}")
message(STATUS "")
message(STATUS "Kernel configurations:")
foreach(kernel_source ${KERNEL_SOURCES})
    get_filename_component(kernel_name ${kernel_source} NAME)
    message(STATUS "  - ${kernel_name}")
endforeach()
message(STATUS "")